tried to avoid horizontal scroll

--- a/less/agency.less
+++ b/less/agency.less
@@ -3,9 +3,11 @@
 
 // Global Components
 
-body {
+html, body {
+    max-width:100%;
     overflow-x: hidden;
     .body-font;
+
 }
 
 .text-muted {
